# i2global-backend

./: .pre-commit-config.yaml  hello.py  pyproject.toml
src/: __main__.py
src/i2global_backend/: application.py  hypercorn_app.py  lifespan.py
src/i2global_backend/api/auth/: jwt_authenticator.py  jwt_token_generator.py
src/i2global_backend/api/database/: database.py  database_setup.py
src/i2global_backend/api/notes/: schema.py  view.py
src/i2global_backend/api/user/: schema.py  view.py
src/i2global_backend/core/: __init__.py
src/i2global_backend/core/config/: __init__.py
src/i2global_backend/middleware/: CustomMiddleware.py
